--- a/style.css
+++ b/style.css
@@ -1,25 +1,34 @@
 @media print {
     body * {
-        visibility: hidden;
-    }
-
-    #receipt, #receipt * {
-        visibility: visible;
+        display: none;  /* hide everything else */
     }
 
     #receipt {
-        position: absolute;
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 80mm;
+        display: block;
+        margin: 0 auto;       /* center horizontally */
+        width: 80mm;          /* width for thermal printer */
+        padding: 0;
+        font-size: 12pt;
+    }
+
+    #receipt table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+
+    #receipt th, #receipt td {
+        border: 1px solid #000;
+        padding: 5px;
+        text-align: left;
     }
 
     @page {
+        size: 80mm auto;      /* set page size for thermal printer */
         margin: 0;
     }
 
     body {
         margin: 0;
+        padding: 0;
     }
 }
