--- a/style.css
+++ b/style.css
@@ -2,11 +2,13 @@
     body {
         margin: 0;
         padding: 0;
+        text-align: center; /* horizontal center */
     }
 
     #receipt {
+        display: inline-block; /* center inline element */
+        text-align: left;      /* content align left */
         width: 80mm;
-        margin: 0 auto; /* ចំកណ្តាល horizontal */
         font-size: 12pt;
         border-collapse: collapse;
     }
@@ -22,12 +24,12 @@
         text-align: left;
     }
 
+    body *:not(#receipt) {
+        display: none;
+    }
+
     @page {
         size: 80mm auto;
         margin: 0;
-    }
-
-    body *:not(#receipt) {
-        display: none;
     }
 }
